tests/paczka2/big_fuzzy/48053466.err
Error in line 10: FVQrHzhJ6rh A982 18,8
Error in line 13: FVQrHzhJ6rh S952 32,8
Error in line 21: FVQrHzhJ6rh S952 94,9
Error in line 12: PBe5i A982 34,5
Error in line 22: FVQrHzhJ6rh A982 47,9
Error in line 24: SsKQwnU S952 11,2
Error in line 46: S952 S952 63,68
Error in line 52: FVQrHzhJ6rh A982 231,6
Error in line 68: S952 S558 7,5
Error in line 65: FVQrHzhJ6rh S558 17,2
Error in line 85: gxXn A982 28,7
Error in line 79: xFjdwE A982 22,1
Error in line 91: xFjdwE S952 98,0
Error in line 119: HfB S952 245,06
Error in line 124: PBe5i S952 33,9
Error in line 128: HfB A982 119,2
Error in line 130: HfB A248 92,0
Error in line 138: FVQrHzhJ6rh S952 65,6
Error in line 153: HfB S952 25,7
Error in line 157: FVQrHzhJ6rh A982 54,8
Error in line 152: SsKQwnU S558 91,3
Error in line 174: gxXn A982 51,8
Error in line 148: S952 S558 102,8
Error in line 185: gxXn S952 19,4
Error in line 189: S952 A982 63,0
Error in line 197: HfB S952 47,6
Error in line 187: PBe5i S952 21,0
Error in line 209: SsKQwnU A248 84,3
Error in line 215: FVQrHzhJ6rh S952 47,7
Error in line 216: FVQrHzhJ6rh S558 28,1
Error in line 229: FVQrHzhJ6rh A248 -2,2
Error in line 228: FVQrHzhJ6rh A248 88,2
Error in line 224: S952 S558 286,3
Error in line 236: PBe5i S558 1,1
